--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,38 +1,25 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+*{
+    margin: 0; padding: 0; box-sizing: border-box;
   }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+  
+  #root{
+    height: 100vh;
   }
-  to {
-    transform: rotate(360deg);
+  
+  .layout {
+    height: 100%;
+    display: grid;
+    grid-template-areas: "header"  "main"  "footer" ;
+    grid-template-rows: 100px  1fr  50px;
   }
-}
+  
+
+  main{
+    grid-area: main;
+    background-color: #72dbf2;
+  }
+
+  footer{
+    grid-area: footer;
+    background-color: rgb(224, 91, 14);
+  }
