--- a/client/src/components/Footer/Footer.scss
+++ b/client/src/components/Footer/Footer.scss
@@ -1,5 +1,7 @@
 footer{
     grid-area: footer;
-    background-color: blue;
-    c
+    background-color:#2a5ea5 ; color: #fff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
